infrastructure/networking/pihole/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole
  namespace: pihole
spec:
  parentRefs:
    - name: gateway-internal
      namespace: gateway
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - pihole.quido.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: pihole-web
          port: 80
          weight: 1
          group: ""
          kind: Service
